--- a/WEEK1/Week1_assignment.ipynb
+++ b/WEEK1/Week1_assignment.ipynb
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "qIRv3qS2bTFt"
       },
@@ -86,66 +86,50 @@
       "cell_type": "code",
       "source": [
         "import re\n",
-        "def clean_text_scratch(text):\n",
-        "  z=text.lower()\n",
-        "  tokens=z.split()\n",
-        "  stopwords=['the', 'is', 'in', 'to', 'of', 'and', 'a', 'it', 'was', 'but', 'or']\n",
-        "\n",
-        "  for words in stopwords:\n",
-        "    for word in tokens:\n",
+        "def clean_text_scratch(sentences):\n",
+        "  sentences=sentences.lower()\n",
+        "  tokens= sentences.split()\n",
+        "  stopwords= ['the', 'is', 'in', 'to', 'of', 'and', 'a', 'it', 'was', 'but', 'or']\n",
+        "  for word in tokens:\n",
+        "    for words in stopwords:\n",
         "      if word==words:\n",
         "        tokens.remove(word)\n",
-        "  filtered=[]\n",
-        "\n",
-        "  def stem(x):\n",
-        "    if x.endswith('ing')==True:\n",
-        "        return x[:-3]\n",
-        "\n",
-        "    elif x.endswith('ly')==True:\n",
-        "        return x[:-2]\n",
-        "\n",
-        "    elif x.endswith('ed')==True:\n",
-        "        return x[:-2]\n",
-        "\n",
-        "    elif x.endswith('s')==True:\n",
-        "        return x[:-1]\n",
-        "    elif x.endswith(';')==True:\n",
-        "        return x[:-1]\n",
-        "    elif x.endswith('.')==True:\n",
-        "        return x[:-1]\n",
-        "    elif x.endswith('!')==True:\n",
-        "        return x[:-1]\n",
-        "    elif x.endswith(',')==True:\n",
-        "        return x[:-1]\n",
-        "    elif x.endswith(':')==True:\n",
-        "        return x[:-1]\n",
-        "    elif x.endswith('?')==True:\n",
-        "        return x[:-1]\n",
+        "  clean=[]\n",
+        "  for word in tokens:\n",
+        "    if word.endswith(\"ing\"):\n",
+        "      clean.append(word[:-3])\n",
+        "    elif word.endswith(\"s\"):\n",
+        "      clean.append(word[:-1])\n",
+        "    elif word.endswith(\"ly\"):\n",
+        "      clean.append(word[:-2])\n",
+        "    elif word.endswith(\"ed\"):\n",
+        "      clean.append(word[:-2])\n",
+        "    elif word.endswith(\";\"):\n",
+        "      clean.append(word[:-1])\n",
+        "    elif word.endswith(\",\"):\n",
+        "      clean.append(word[:-1])\n",
+        "    elif word.endswith(\".\"):\n",
+        "      clean.append(word[:-1])\n",
+        "    elif word.endswith(\"!\"):\n",
+        "      clean.append(word[:-1])\n",
+        "    elif word.endswith(\"?\"):\n",
+        "      clean.append(word[:-1])\n",
+        "    elif word.endswith(\"..\"):\n",
+        "      clean.append(word[:-1])\n",
         "    else:\n",
-        "      return x\n",
+        "      clean.append(word)\n",
+        "  return clean\n",
         "\n",
-        "  for z in tokens:\n",
-        "    filtered.append(stem(z))\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "  return(filtered)\n",
-        "print(clean_text_scratch(corpus[0]))\n",
-        "\n",
-        "\n",
-        "\n"
+        "print(clean_text_scratch(corpus[0]))\n"
       ],
       "metadata": {
         "id": "oR4BKqITy17z",
+        "outputId": "bd7e7b54-ec60-4b5b-e1c6-2ff8019f45d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "917ea18c-a3d8-4580-9813-33459ed92647"
+        }
       },
-      "execution_count": 46,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,32 +176,68 @@
         "from nltk.corpus import stopwords\n",
         "from nltk.stem import WordNetLemmatizer\n",
         "\n",
-        "#write rest of the code here"
+        "def clean_text_nltk(text):\n",
+        "  tokens= word_tokenize(text)\n",
+        "  x= stopwords.words('english')\n",
+        "  for word in tokens:\n",
+        "    for words in x:\n",
+        "      if word==words:\n",
+        "        tokens.remove(word)\n",
+        "  lemmatizer = WordNetLemmatizer()\n",
+        "  tokens = [lemmatizer.lemmatize(word) for word in tokens]\n",
+        "  return tokens\n",
+        "\n",
+        "print(clean_text_nltk(corpus[1]))\n"
       ],
       "metadata": {
         "id": "v_4FjuCqy5Kt",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cde3682c-228f-4f40-ec74-ec1ce0c57601"
+        "outputId": "e5589c22-ec6a-451d-f9f9-0eeb0bfaa7c0"
       },
-      "execution_count": null,
+      "execution_count": 56,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['The', 'pizza', 'absolutely', 'delicious', ',', 'the', 'service', 'terrible', '...', 'I', 'wo', \"n't\", 'go', 'back', '.']\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
             "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n",
             "[nltk_data] Downloading package omw-1.4 to /root/nltk_data...\n",
+            "[nltk_data]   Package omw-1.4 is already up-to-date!\n",
             "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
+            "[nltk_data]   Package punkt_tab is already up-to-date!\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nltk\n",
+        "import re\n",
+        "import string\n",
+        "\n",
+        "cleaned_corpus = [re.sub(f\"[{re.escape(string.punctuation)}]\", \"\", doc) for doc in corpus]\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "XDdMMUOSKHk3"
+      },
+      "execution_count": 25,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -249,6 +269,7 @@
       "cell_type": "code",
       "source": [
         "import nltk\n",
+        "import numpy as np\n",
         "from nltk.tokenize import word_tokenize\n",
         "from nltk.corpus import stopwords\n",
         "from nltk.stem import WordNetLemmatizer\n",
@@ -257,18 +278,47 @@
         "nltk.download('punkt')\n",
         "nltk.download('stopwords')\n",
         "nltk.download('wordnet')\n",
+        "arr=[]\n",
+        "for i in range (0, len(corpus)):\n",
+        "  arr.append(clean_text_scratch(cleaned_corpus[i]))\n",
         "\n",
-        "# rest of the code here"
+        "join=[]\n",
+        "for i in range (0,len(arr)):\n",
+        "  join = join + arr[i]\n",
+        "vocabulary=sorted(set(join))\n",
+        "print(vocabulary)\n",
+        "def vectorize(text):\n",
+        "  for words in text:\n",
+        "\n"
       ],
       "metadata": {
         "id": "yVUFCkm7yrg-",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "994238a5-500e-4b63-f99a-18ac36d6bc58"
+        "outputId": "711e70fa-273a-431e-8644-2d58e3592e3f"
       },
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['absolute', 'algebra', 'artificial', 'back', 'be', 'behind', 'brown', 'concern', 'data', 'deliciou', 'dog', 'ethical', 'fox', 'go', 'hate', 'however', 'i', 'intelligence', 'involve', 'jump', 'lazy', 'learn', 'linear', 'love', 'machine', 'math', 'mind', 'nobler', 'not', 'over', 'pizza', 'question', 'quick', 'remain', 'science', 'service', 'statistic', 'terrible', 'that', 'the', 'ti', 'transform', 'whether', 'wont', 'world']\n",
+            "[[0. 0. 1. 0. 0. 0. 0. 1. 0. 0. 0. 1. 0. 0. 0. 1. 0. 1. 0. 0. 0. 0. 0. 0.\n",
+            "  0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 1.]\n",
+            " [1. 0. 0. 1. 0. 0. 0. 0. 0. 1. 0. 0. 0. 1. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.\n",
+            "  0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 1. 0. 1. 0. 1. 0. 0. 0. 1. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 1. 0. 1. 0. 0. 0. 0. 0. 0. 1. 1. 0. 0. 0.\n",
+            "  0. 0. 0. 0. 0. 1. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 2. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+            "  0. 0. 1. 1. 1. 0. 0. 1. 0. 0. 0. 0. 0. 0. 1. 2. 1. 0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 1. 1. 0.\n",
+            "  1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 2. 0. 0. 0. 0. 1. 0. 1.\n",
+            "  1. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stderr",
@@ -280,16 +330,6 @@
             "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
             "[nltk_data]   Package wordnet is already up-to-date!\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
         }
       ]
     },
